--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -3,11 +3,15 @@
 body {
   margin: 0;
   padding: 0;
-  min-height: 100vh;
+}
+
+.hero-container {
   background-image: url("https://images.unsplash.com/39/lIZrwvbeRuuzqOoWJUEn_Photoaday_CSD%20%281%20of%201%29-5.jpg?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-size: cover; /* This ensures the image covers the entire background */
   background-repeat: no-repeat; /* Prevents the image from repeating */
   background-position: center; /* Centers the image */
+  /* height: 100vh; */
+  object-fit: cover;
 }
 
 .something {
@@ -25,7 +29,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 100px;
+  margin-top: 150px;
   margin-bottom: 80px;
 }
 
@@ -121,7 +125,7 @@ body {
 
 @media screen and (min-width: 480px) and (max-width: 600px) {
   .text-content {
-    margin-top: 100px;
+    margin-top: 50px;
     margin-bottom: 30px;
   }
 
