--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -9,19 +9,8 @@
 .logo {
   width: 124px;
   height: 124px;
-  margin-left: 10%;
 }
 
-.a-child-container {
-  margin-right: 10%;
-}
-
-.a-child-container ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-}
 
 .a-child-container ul li {
   margin-left: 80px;
@@ -69,7 +58,6 @@
 
 
 .nav {
-  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -170,10 +158,11 @@ a {
   }
   .nav {
     padding: 15px 20px;
+    position: fixed;
   }
   .nav .nav-links {
     position: fixed;
-    top: 0;
+    top: -16px;
     left: -100%;
     height: 100%;
     max-width: 100px;
